--- a/html/user.html
+++ b/html/user.html
@@ -2,11 +2,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="stylesheet" href="/css/css.css">
+  <link rel="stylesheet" href="/css/main.css">
   <meta charset="UTF-8">
   <title>Регистрация</title>
 </head>
 <body>
-  <h2>Регистрация (заглушка)</h2>
+  <h2>Регистрация</h2>
   <form action="/users" method="POST">
     <div>
       <input type="text" name="username" placeholder="Логин">
